finalized style index and js

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -4,29 +4,33 @@
   <meta charset="UTF-8">
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <h1>Let's Play Tic Tac Toe!</h1>
 
-   <div class="wrapper">
+   <div class="wrapper" action="http://www.co.google.in">
     <div id="tictac">
       <div class="main-box">
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
+        <div id="G0" class="grid">&nbsp;</div>
+        <div id="G1" class="grid">&nbsp;</div>
+        <div id="G2" class="grid">&nbsp;</div>
       </div>
       <div class="main-box">
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
+        <div id="G3" class="grid">&nbsp;</div>
+        <div id="G4" class="grid">&nbsp;</div>
+        <div id="G5" class="grid">&nbsp;</div>
       </div>
       <div class="main-box">
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
-        <div id="" class="grid"><span style="opacity: 0;">-</span></div>
+        <div id="G6" class="grid">&nbsp;</div>
+        <div id="G7" class="grid">&nbsp;</div>
+        <div id="G8" class="grid">&nbsp;</div>
       </div>
     </div>
   </div>
+  <p>Current player: X</p>
+  <div class="button"><button>Reset</button></div>
 <script src="js/script.js">
 </script>
 </body>
