--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <h1>Let's Play Tic Tac Toe!</h1>
